src/objects/Assessment_List__c.object
<CustomObject>
    <customHelpPage>Help_Assessment_List_Item_VF</customHelpPage>
    <fields>
        <fullName>Assessment_Name__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>Assessment Name and Date are mandatory</inlineHelpText>
        <label>Assessment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_First_Name__c</fullName>
        <defaultValue>$User.FirstName</defaultValue>
        <encrypted>true</encrypted>
        <label>Assessor First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Last_Name__c</fullName>
        <defaultValue>$User.LastName</defaultValue>
        <encrypted>true</encrypted>
        <label>Assessor Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Assessor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>List of Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credential_Role_of_Assessor__c</fullName>
        <defaultValue>$User.Relationship__c</defaultValue>
        <encrypted>true</encrypted>
        <label>Credential/Role of Assessor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Assessed__c</fullName>
        <encrypted>true</encrypted>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Functional_Domain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functional Domain</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Functional__c.Case__c</field>
                <operation>equals</operation>
                <valueField>$Source.Case__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Functional__c</referenceTo>
        <relationshipLabel>Assessments List Items</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes11__c</fullName>
        <label>Notes_Obsolete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encrypted>true</encrypted>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Assessment List Item</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_Owner_and_Internal_can_Edit</fullName>
        <active>true</active>
        <description>**丄具슞七풑 妶斏麛좶랒웇쟄颡ꁚ 苻膃炌緄饩怞떦橴鰀 蔵筫踱峬姷됴僦껓쓑 脇麳ꉳ嶓鲭萆菙麴言 尺珸奖췼믵殁勝癃谀 戩滂嘏跐瘋鞁삘퓵圀 塊釚쑭騭燮詐櫃뷖룑 呣늆恊랼昃냠먉쑣쟑 枸씻槬劜워憡滔摑껑 洇隄刈妾牌撕듣ꍄ뿑 裩獊漬峈뽘疍羑惛鄀 蔵筫踱峬姷됴僦껓쓑.&amp;\\ ䷀仄䷀䷀䷈56308!</description>
        <errorConditionFormula>AND 
( 
NOT(ISNEW()),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Director&quot;,
$Profile.Name &lt;&gt; &quot;STADD Coordinator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Project Administrator&quot;, 
CreatedById &lt;&gt; $User.Id    
)</errorConditionFormula>
        <errorMessage>Only the record creator or a System Administrator can edit this record.</errorMessage>
    </validationRules>
</CustomObject>